--- a/Javascript/04task.html
+++ b/Javascript/04task.html
@@ -5,33 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Currency Converter</title>
   </head>
+  <style>
+    .center{
+      text-align: center;
+    }
+  </style>
   <body>
     <h1 id="title">Currency Converter</h1>
-    Indian Rupees :- <input type="text" id="rupees" />
-    <select id="currency" onchange="getConverter()">
-      <option>---select option---</option>
-      <option value="0.012">America (USD)</option>
-      <option value="0.011">Germany (Euro)</option>
-      <option value="0.086">China (Yuan)</option>
-      <option value="0.016">Canada (Canadian Dollar)</option>
-      <option value="0.018">Australia (Australian Dollar)</option>
-    </select>
+    <div class="center">
+      <label>Indian Rupees :-</label><input type="text" id="rupees" />
+      <select id="currency" onchange="getConverter()">
+        <option>---select option---</option>
+        <option value="0.012">America (USD)</option>
+        <option value="0.011">Germany (Euro)</option>
+        <option value="0.086">China (Yuan)</option>
+        <option value="0.016">Canada (Canadian Dollar)</option>
+        <option value="0.018">Australia (Australian Dollar)</option>
+      </select>
 
-    <div id="res"></div>
-
+      <div id="res"></div>
+    </div>
     <script>
+      let h1Tag = document.getElementById("title");
 
-        var h1_tag = document.getElementById('title');
+      h1Tag.style.color = "red";
+      h1Tag.style.textAlign = "center";
 
-        h1_tag.style.color = 'red';
-        h1_tag.style.textAlign = 'center';
-        
+      let localCurrency = document.getElementById("rupees");
+      let otherCurrencyConversionFactor = document.getElementById("currency");
 
-      localcurrency = document.getElementById("rupees");
-      othercurrency = document.getElementById('currency');
-
-      function getConverter(){
-        document.getElementById('res').innerHTML = localcurrency.value * othercurrency.value;
+      function getConverter() {
+        // Rounding approach referrenced from https://stackoverflow.com/questions/11832914/how-to-round-to-at-most-2-decimal-places-if-necessary
+        document.getElementById("res").innerHTML =
+          Math.round(localCurrency.value * otherCurrencyConversionFactor.value * 1000) / 1000;
       }
     </script>
   </body>
