--- a/Javascript/34methods.html
+++ b/Javascript/34methods.html
@@ -24,6 +24,7 @@
 
         h1_tag = document.querySelectorAll('h1');
 
+        h1_tag[0].style.color = "#fb058c";
         h1_tag[1].style.color = "blue";
 
         for(i=0;i<h1_tag.length;i++){
