--- a/Javascript/37Array.html
+++ b/Javascript/37Array.html
@@ -9,8 +9,9 @@
     <script>
     let students = ["Chirag",30,"FrontEnd"]; 
         document.write(students)
+        document.write("<br>")
 
-        // document.write(students.join(" "))
+        document.write(students.join(" "))
 
         // document.write(students[2]) // *
 
