--- a/Javascript/37Array.html
+++ b/Javascript/37Array.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Array</title>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-    let students = ["Chirag",30,"FrontEnd"]; 
-        document.write(students)
-        document.write("<br>")
-
-        document.write(students.join(" "))
-
-        // document.write(students[2]) // *
-
-        // for(n=0;n<students.length;n++)
-        // {
-        //      document.write(students[n])
-        // }
+      let students = ["Chirag", 30, "FrontEnd"];
+      // document.write(students);
+      // document.write("<br>");
+      // document.write(students.join(" "))
+      // document.write("<br>");
+      // document.write(students[2]);
+      // document.write("<br>");
+      for (n = 0; n < students.length; n++) {
+        document.write(students[n]);
+      }
     </script>
-</body>
+  </body>
 </html>
