--- a/Advance_Javascript/02hof1.html
+++ b/Advance_Javascript/02hof1.html
@@ -8,13 +8,28 @@
 <body>
     <h1>HIGHER ORDER FUNCTION</h1>
 <script>
-    let radius = 2;
+    // let radius = 2;
 
-    document.write(Math.PI + "<br>");
+    // document.write(Math.PI + "<br>");
 
-    let Area = Math.PI * radius;
+    // let Area = Math.PI * radius;
 
-    document.write(Area);
+    // document.write(Area);
+
+    let radius = [1,2,3,4,5,6];
+    document.write(radius + "<br>");
+
+    let op = [];
+
+    for(index=0;index<radius.length;index++){
+        //document.write(index)
+
+        //document.write(radius[index] * Math.PI +"<br>");
+        //console.log(radius[index] * Math.PI );
+
+        op.push(radius[index] * Math.PI);
+    }
+    console.log(op)
 </script>
 </body>
 </html>
