--- a/Advance_Javascript/05hof-advJs.html
+++ b/Advance_Javascript/05hof-advJs.html
@@ -14,8 +14,8 @@
       };
 
       const AreaofCircle = (radius, area) => {
-        // console.log(r); //const r = [10,20,30]
-        // console.log(a(r[0]))//10
+        // console.log(radius); //const r = [10,20,30]
+        // console.log(area(radius[0]))//10
 
         for (i = 0; i < radius.length; i++) {
           console.log(area(radius[i]) * Math.PI)
