--- a/Advance_Javascript/13fetchData.html
+++ b/Advance_Javascript/13fetchData.html
@@ -14,16 +14,51 @@
     .then(function t(){})
     .then(()=>{}) -->
 
-    <button>Get Text</button>
-    <button>Get JSON Data</button>
-    <button>Get API Data</button>
+    <button id="btn1">Get Text</button>
+    <button id="btn2">Get JSON Data</button>
+    <button id="btn3">Get API Data</button>
+
+        <div id="op"></div>
 
     <script>
-      fetch('textFile.txt')
-      .then((res) => { 
-        console.log(res);
-      });
-      // .then((data)=>{})
+      b1 = document.getElementById("btn1");
+      b2 = document.getElementById("btn2");
+      b3 = document.getElementById("btn3");
+
+      b1.addEventListener("click", GetText);
+      b2.addEventListener("click", GetJSON);
+      b3.addEventListener("click", GetAPI);
+
+      function GetText() {
+        fetch("textFile.txt").then((res) => {
+          return res.text();
+        })
+        .then((data) => {
+            //console.log(data);
+            //document.write(data)
+            document.getElementById('op').innerHTML = data 
+        });
+      }
+
+      function GetJSON() {
+        fetch("data.json")
+          .then((res) => {
+            return res.json();
+          })
+          .then((data) => {
+            console.log(data);
+          });
+      }
+
+      function GetAPI() {
+        fetch("https://jsonplaceholder.typicode.com/users")
+          .then((res) => {
+            return res.text();
+          })
+          .then((data) => {
+            console.log(data);
+          });
+      }
     </script>
   </body>
 </html>
