--- a/Advance_Javascript/14student.html
+++ b/Advance_Javascript/14student.html
@@ -15,7 +15,7 @@
     .then((y)=>{
       //console.log(y)
 
-      var h = `<table broder='1'>
+      var h = `<table border="1">
         <tr>
           <td>Name</td>
           <td>Age</td>
