--- a/Advance_Javascript/19Revision.html
+++ b/Advance_Javascript/19Revision.html
@@ -32,12 +32,12 @@
       }
 
       let obj1 = new T();
-      let obj2 = new T();
+      
       document.write(obj1.a());
-      obj2.b();
+      obj1.b();
       obj1.c();
-      obj2.d();
-      t.constructor();
+      obj1.d();
+      T.constructor();
     </script>
   </body>
 </html>
