--- a/Advance_Javascript/16oops.html
+++ b/Advance_Javascript/16oops.html
@@ -13,7 +13,7 @@
     <br />
     <br />
     <ol>
-      <li>Class and Object</li>
+      <b><li>Class and Object</li></b>
       <br />
       ==> Object :- Everything in world is an object (Physical Entity)
       <br />
@@ -36,24 +36,55 @@
       varName = val (Correct way)<br /><br />
       function Walk()<br /><br />{<br /><br />
       var x = 12
-      <br /><br />} }
+      <br /><br />}
+      <br />}
       <br /><br />
       var/let/const varName(obj) = new className(Human) varName.varname123;
       <br /><br />
       constructor
       <br /><br />
-      <li>
-        Encapsulation ==> //n cap su lation
-        <br /><br />Hiding data from outside world.
-      </li>
-      <br />
-      <li>Abstraction</li>
+      <b><li>Encapsulation ==> //n cap su lation</li></b>
+      <br />Hiding data from outside world.
+      <br /><br />
+      <b><li>Abstraction</li></b>
       <br />
       Access only those details which are necessary.
       <br /><br />
-      <li>Inheritance</li>
+      <b><li>Inheritance</li></b>
+      <br />To access properties (var,function) of one class to another class we
+      need Inheritance
       <br />
-      <li>Polymorphism</li>
+      To access properties of parent class into child class.
+      <br />
+      <b>Using extends keyword</b
+      ><br />
+      <b>Syntax:</b>
+      <br />
+      class childClassName extends parentClassName
+      <br />
+      class child extends Parent
+      <br />
+      You must create obj of CHILD CLASS only..
+      <br />
+      <br />
+      class Parent<br />
+      {<br />
+      x=12;<br />
+      }<br />
+      <br />
+      class child<br />
+      {<br />
+      <br />
+      }<br />
+      <ol>
+        <li>Single a ==> b</li>
+        <li>Multiple a,b ==>c</li>
+        <li>Multilevel a=> b ==> c</li>
+        <li>Hierarchical</li>
+        <li>Hybrid</li>
+      </ol>
+      <br />
+      <b><li>Polymorphism</li></b>
       <br />
     </ol>
   </body>
