--- a/Advance_Javascript/16oops.html
+++ b/Advance_Javascript/16oops.html
@@ -84,8 +84,11 @@
         <li>Hybrid</li>
       </ol>
       <br />
-      <b><li>Polymorphism</li></b>
-      <br />
+      <b><li>Polymorphism</li></b
+      >One name multiple form
+      <br /><br />Compile Time / Static
+      <br />same name same para 
+      <br />same name diff para
     </ol>
   </body>
 </html>
