--- a/Advance_Javascript/task.html
+++ b/Advance_Javascript/task.html
@@ -12,7 +12,7 @@
             getX()
             {
                 var prop = "Father Prop"
-                document.write("200 <br>")
+                document.write(" Father Prop 200 <br>")
             }
         }
         class mother
@@ -20,7 +20,7 @@
             getY()
             {
                 var prop = "Mother Prop"
-                document.write("200 <br>")
+                document.write("Monter Prop 200 <br>")
             }
         }
         class son extends father
