--- a/Advance_Javascript/task1.html
+++ b/Advance_Javascript/task1.html
@@ -9,13 +9,13 @@
     <script>
       class Father {
         getA() {
-          var prop = "Father Prop";
+          var prop = 200;
           document.write("Father Prop<br>");
         }
       }
       class Mother {
         getB() {
-          var prop = "Mother Prop";
+          var prop1 = 200-prop;
           document.write("Mother Prop 200 <br>");
         }
       }
