--- a/Javascript/09nested.html
+++ b/Javascript/09nested.html
@@ -23,4 +23,29 @@
       }
     </script>
   </body>
+</html><!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nested Condition</title>
+  </head>
+  <body>
+    <script>
+      if (1 == 1) {
+        if (2 >= 2) {
+          if (4 < 3) {
+          } else if (5 < 5) {
+            if (3 == 3) {
+              document.write("nested..! 1");
+            }
+          } else {
+            if (1 == 1) {
+              document.write("nested..! 2");
+            }
+          }
+        }
+      }
+    </script>
+  </body>
 </html>
